--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=oeste
+
+spring.output.ansi.enabled=ALWAYS
+
+spring.datasource.url=jdbc:mysql://localhost:3306/sevOeste
+spring.datasource.username=root
+spring.datasource.password=PHW#84#Lucas
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+server.error.include-message=AlWAYS
+server.error.include-stacktrace=ALWAYS
