--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,14 @@ spring.application.name=oeste
 
 spring.output.ansi.enabled=ALWAYS
 
-spring.datasource.url=jdbc:mysql://localhost:3306/sevOeste
+spring.datasource.url=jdbc:mysql://localhost:3306/sevOeste?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=PHW#84#Lucas
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto = update
+
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation = true
+spring.jpa.show-sql=true
 
 server.error.include-message=AlWAYS
 server.error.include-stacktrace=ALWAYS
