--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto = update
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation = true
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 
 server.error.include-message=AlWAYS
 server.error.include-stacktrace=ALWAYS
