--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.output.ansi.enabled=ALWAYS
 
 spring.datasource.url=jdbc:mysql://localhost:3306/sevOeste?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=PHW#84#Lucas
+spring.datasource.password=mySQL#psw#Lucas
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto = update
 
