[BUILD] Create get conhecimentos.
Created the get method to get all conhecimentos in the database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,5 @@ spring.jpa.show-sql=false
 
 server.error.include-message=AlWAYS
 server.error.include-stacktrace=ALWAYS
+
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
