--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,17 @@
-spring.application.name=oeste
+spring.application.name=servoeste
 
 spring.output.ansi.enabled=ALWAYS
 
-spring.datasource.url=jdbc:mysql://localhost:3306/sevOeste?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=mySQL#psw#Lucas
+server.servlet.context-path=/api/v1
+
+spring.datasource.url=jdbc:mysql://localhost:3306/servOeste?createDatabaseIfNotExist=true
+spring.datasource.username=${MYSQL_USERNAME}
+spring.datasource.password=${MYSQL_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation = true
-spring.jpa.show-sql=false
+spring.jpa.show-sql=true
 
 server.error.include-message=AlWAYS
 server.error.include-stacktrace=ALWAYS
