--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,5 @@ server.error.include-message=AlWAYS
 server.error.include-stacktrace=NEVER
 
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+
+springdoc.default-produces-media-type=application/json
