--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,8 +10,11 @@ spring.datasource.password=${MYSQL_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation = true
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.show-sql=false
+#spring.jpa.properties.hibernate.format_sql=true
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 server.error.include-message=AlWAYS
 server.error.include-stacktrace=NEVER
@@ -19,3 +22,4 @@ server.error.include-stacktrace=NEVER
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 
 springdoc.default-produces-media-type=application/json
+springdoc.swagger-ui.path=/swagger
