--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.output.ansi.enabled=ALWAYS
 
 server.servlet.context-path=/api/v1
 
-spring.datasource.url=jdbc:mysql://localhost:3306/servOeste?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/${DB_NAME:servOeste}?createDatabaseIfNotExist=true
 spring.datasource.username=${MYSQL_USERNAME}
 spring.datasource.password=${MYSQL_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
