[BUILD] Filter services

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+# suppress inspection "UnusedProperty" for whole file
 spring.application.name=servoeste
 
 spring.output.ansi.enabled=ALWAYS
@@ -8,7 +9,7 @@ spring.datasource.url=jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/${DB_NAM
 spring.datasource.username=${MYSQL_USERNAME}
 spring.datasource.password=${MYSQL_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=update
 
 flyway.ignore-unsupported-database=true
 flyway.baseline-version=1
