--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,9 +11,13 @@ spring.datasource.password=${MYSQL_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 
-flyway.ignore-unsupported-database=true
-flyway.baseline-version=1
-flyway.baseline-on-migrate=true
+spring.flyway.url=jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/${DB_NAME:servOeste}
+spring.flyway.user=${MYSQL_USERNAME}
+spring.flyway.password=${MYSQL_PASSWORD}
+
+spring.flyway.ignore-unsupported-database=true
+spring.flyway.baseline-version=1
+spring.flyway.baseline-on-migrate=true
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.show-sql=false
