--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,14 +21,15 @@ spring.flyway.baseline-on-migrate=true
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.show-sql=false
+
 #spring.jpa.properties.hibernate.format_sql=true
-#logging.level.org.hibernate.SQL=DEBUG
-#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 server.error.include-message=AlWAYS
-server.error.include-stacktrace=NEVER
+server.error.include-stacktrace=ALWAYS
 
-spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
 
 springdoc.default-produces-media-type=application/json
 springdoc.swagger-ui.path=/swagger
