--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,23 +9,24 @@ spring.datasource.url=jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/${DB_NAM
 spring.datasource.username=${MYSQL_USERNAME}
 spring.datasource.password=${MYSQL_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=update
 
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.show-sql=false
+#spring.jpa.properties.hibernate.format_sql=true
+
+spring.flyway.enabled=true
 spring.flyway.url=jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/${DB_NAME:servOeste}
 spring.flyway.user=${MYSQL_USERNAME}
 spring.flyway.password=${MYSQL_PASSWORD}
-
 spring.flyway.ignore-unsupported-database=true
 spring.flyway.baseline-version=1
 spring.flyway.baseline-on-migrate=true
 
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-spring.jpa.show-sql=false
 spring.main.allow-bean-definition-overriding=true
 
-#spring.jpa.properties.hibernate.format_sql=true
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 server.error.include-message=AlWAYS
 server.error.include-stacktrace=ALWAYS
