[TEST] Use the ArchUnit with JUnit5 dependency in Architecture tests

--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>com.tngtech.archunit</groupId>
-			<artifactId>archunit</artifactId>
+			<artifactId>archunit-junit5</artifactId>
 			<version>1.4.1</version>
 			<scope>test</scope>
 		</dependency>
