--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,11 @@
 			<artifactId>flyway-mysql</artifactId>
 			<version>11.1.0</version>
 		</dependency>
-
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>runtime</scope>
+		</dependency>
 		<dependency>
 			<groupId>com.mysql</groupId>
 			<artifactId>mysql-connector-j</artifactId>
