--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,8 +13,8 @@ spring:
       enabled: ALWAYS
   datasource:
     url: jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/${DB_NAME:servOeste}?createDatabaseIfNotExist=TRUE
-    username: '${MYSQL_USERNAME}'
-    password: '${MYSQL_PASSWORD}'
+    username: ${MYSQL_USERNAME}
+    password: ${MYSQL_PASSWORD}
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
@@ -30,8 +30,8 @@ spring:
   flyway:
     enabled: true
     url: 'jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/${DB_NAME:servOeste}'
-    user: '${MYSQL_USERNAME}'
-    password: '${MYSQL_PASSWORD}'
+    user: ${MYSQL_USERNAME}
+    password: ${MYSQL_PASSWORD}
     ignore-unsupported-database: true
     baseline-version: '0'
     baseline-on-migrate: true
