--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -38,6 +38,8 @@ spring:
   main:
     allow-bean-definition-overriding: true
   mvc:
+    problemdetails:
+      enabled: true
     pathmatch:
       matching-strategy: ANT_PATH_MATCHER
 
