--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 server:
   servlet:
-    context-path: /api/v1
+    context-path: /api
   error:
     include-message: AlWAYS
     include-stacktrace: ALWAYS
