[TEST] Create-Drop memory database and pass envs

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,7 +21,7 @@ spring:
       ddl-auto: none
     properties:
       hibernate:
-        #        format_sql: true
+#        format_sql: false
         jdbc:
           lob:
             non_contextual_creation: true
