--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.5.9</version>
+		<version>4.0.1</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.sev</groupId>
@@ -15,6 +15,7 @@
 	<description>Servidor do ServOeste</description>
 	<properties>
 		<java.version>21</java.version>
+        <flyway.version>10.21.0</flyway.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -56,14 +57,15 @@
 			<optional>true</optional>
 		</dependency>
 
-		<dependency>
-			<groupId>org.flywaydb</groupId>
-			<artifactId>flyway-core</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.flywaydb</groupId>
-			<artifactId>flyway-mysql</artifactId>
-		</dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-flyway</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-mysql</artifactId>
+            <version>10.21.0</version>
+        </dependency>
 
 		<dependency>
 			<groupId>com.h2database</groupId>
@@ -102,7 +104,7 @@
 		<dependency>
 			<groupId>org.springdoc</groupId>
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-			<version>2.8.15</version>
+			<version>3.0.1</version>
 		</dependency>
 	</dependencies>
 
