[FIX] Environment Variables in docker-compose and .env.example

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -21,6 +21,11 @@ services:
       MYSQL_USERNAME: ${MYSQL_USERNAME}
       MYSQL_PASSWORD: ${MYSQL_PASSWORD}
       PORT: 8080
+      JWT_TOKEN_SECRET: ${JWT_TOKEN_SECRET}
+      JWT_TOKEN_EXPIRATION_TIME: ${JWT_TOKEN_EXPIRATION_TIME}
+      REFRESH_TOKEN_EXPIRATION_TIME: ${REFRESH_TOKEN_EXPIRATION_TIME}
+      APP_ADMIN_USERNAME: ${APP_ADMIN_USERNAME}
+      APP_ADMIN_PASSWORD: ${APP_ADMIN_PASSWORD}
     depends_on:
       - db
     ports:
