--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,7 @@ DB_NAME=
 
 JWT_TOKEN_SECRET=
 JWT_TOKEN_EXPIRATION_TIME=
+REFRESH_TOKEN_EXPIRATION_TIME=
 
 APP_ADMIN_USERNAME=""
 APP_ADMIN_PASSWORD=""
